[package]
name = "cached"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench_testable = []

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
async-std = "1.12.0"
criterion = "0.4.0"

[dependencies]
bloomfilter = "1.0.9"
crossbeam-channel = "0.5.7"
crossbeam-utils = "0.8.15"
dashmap = "5.4.0"
hashbrown = "0.13.2"
log = "0.4.17"
num = "0.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"

[[bench]]
name = "read_buffer"
harness = false