[package]
name = "tinylfu-cached"
version = "0.0.1"
edition = "2021"
authors = ["Sarthak Makhija"]
description = """
High performance, LFU based in-memory cache.
"""
readme = "README.md"
repository = "https://github.com/SarthakMakhija/cached"
license = "MIT OR Apache-2.0"
keywords = ["cached", "LFU", "TinyLFU", "tinylfu-cached"]
categories = ["caching"]
include = ["src/", "LICENSE-*", "README.md", "tests/", "benches/"]

[package.metadata.docs.rs]
all-features = false

[features]
bench_testable = []

[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
async-std = "1.12.0"
criterion = { version = "0.4.0", features = ["async_tokio"] }
rand_distr = "0.4.3"

[dependencies]
bloomfilter = "1.0.9"
crossbeam-channel = "0.5.7"
crossbeam-utils = "0.8.15"
dashmap = "5.4.0"
hashbrown = "0.13.2"
log = "0.4.17"
num = "0.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"

[[bench]]
name = "bench_main"
harness = false
